add title and test tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <title>Logan's Portfolio</title>
 </head>
+<body>
+  <h1>Test</h1>
+  <h2>Test <em>Test</em></h2>
+  
+  <p>Test <strong>Test</strong></p>
+  <p>Test</p>
+
+  <p>Test</p>
+  <ul>
+    <li>Test</li>
+    <li>Test</li>
+    <li>Test</li>
+    <li>Test</li>
+  </ul>
+  <p>
+    Test <a href="http://www.epicodus.com/"> Test</a>.
+  </p>
+  <p>Test <a href="favorite-things.html">Test</a></p>
+  <img src="cat.jpeg" alt="A photo of a cute kitten." >
+  <p>Test <a href="box-model.html">Test</a></p>
+  <p id="line2">This ID test will also be red. </p>
+</body>
 </html>
