add basic outline of readme

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="test/css">
   <title>Logan's Portfolio</title>
 </head>
 <body>
