add background and title styling

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link href="css/styles.css" rel="stylesheet" type="test/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Logan's Portfolio</title>
 </head>
 <body>
-  <h1>Test</h1>
+  <h1 id="title">Logan Roth's (Lo-GR) Epicodus Portfolio</h1>
   <h2>Test <em>Test</em></h2>
   
   <p>Test <strong>Test</strong></p>
