add about me feature and assign box properties and styling to it

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <h1 id="title">Logan Roth's (Lo-GR) Epicodus Portfolio</h1>
+
+  <div class="aboutme">
+    test
+  </div>
   <h2>Test <em>Test</em></h2>
   
   <p>Test <strong>Test</strong></p>
