--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 <body>
   <h1 id="title">Logan Roth's (Lo-GR) Epicodus Portfolio</h1>
 
+<br/>
+
   <div class="aboutme">
-    test
+    <h2>About Me</h2>
+    <img src=personalpic.jpg class="personalpic">
+
   </div>
   <h2>Test <em>Test</em></h2>
   
