add content of about me, adjust box properties

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 <body>
   <h1 id="title">Logan Roth's (Lo-GR) Epicodus Portfolio</h1>
 
-<br/>
+  <br/>
 
   <div class="aboutme">
     <h2>About Me</h2>
     <img src=personalpic.jpg class="personalpic">
-
+    <p>
+    Hello! Welcome to my portfolio. I am studying at <strong></strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I 
+    </p>
   </div>
+  <br/>
+  
   <h2>Test <em>Test</em></h2>
   
   <p>Test <strong>Test</strong></p>
