add background feature template and formatting

--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
     <h2>About Me</h2>
     <img src=personalpic.jpg class="personalpic">
     <p>
-    Hello! Welcome to my portfolio. I am studying at <strong></strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I 
+    Hello! Welcome to my portfolio. I am studying at <strong></strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area.
     </p>
   </div>
   <br/>
-  
+  <div class="education">
+    <h2>Background</h2>
+    <img src=backgroundpic.jpg class="backgroundpic">
+    <p>
+    Hello! Welcome to my portfolio. I am studying at <strong></strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area.
+    </p>
+  </div>
+  <br/>
+  <br/>
+  <br/>
   <h2>Test <em>Test</em></h2>
   
   <p>Test <strong>Test</strong></p>
