add education content

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     </p>
   </div>
   <br/>
-  <div class="education">
+  <div class="backinfo">
     <h2>Background</h2>
     <img src=backgroundpic.jpg class="backgroundpic">
+    <h3>Education</h3>
     <p>
-    Hello! Welcome to my portfolio. I am studying at <strong></strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area.
+      I graduated highschool in Port Orchard then went into Olympic College in Bremerton. I graduated from Olympic College with an Associates in Business. In order to continue schooling, I moved to South Dakota and graduated from South Dakota State University with a Bachelors in Science of Entrepreneurial Studies.
     </p>
+    
   </div>
   <br/>
   <br/>
