fill out background content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>About Me</h2>
     <img src=personalpic.jpg class="personalpic">
     <p>
-    Hello! Welcome to my portfolio. I am studying at <strong></strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area.
+    Hello! Welcome to my portfolio. I am studying at <strong></strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area. I'm married and my wife and I share one cat-baby.
     </p>
   </div>
   <br/>
@@ -24,11 +24,16 @@
     <p>
       I graduated highschool in Port Orchard then went into Olympic College in Bremerton. I graduated from Olympic College with an Associates in Business. In order to continue schooling, I moved to South Dakota and graduated from South Dakota State University with a Bachelors in Science of Entrepreneurial Studies.
     </p>
-    
+    <h3>Job Experience</h3>
+    <p>While attending Olympic College, I was hired in a student leader role for a year where I learned leadership, meeting ettique and valuable skills working in a multi-department environment. In South Dakota, I assistant-managed a small startup called Zapoya Delivery(which was then called Zipdish). For a year and a half leading up to Epicodus, I worked at Columbia State Bank as a Loan Documents Processor. </p>
+    <h3>Hobbies</h3>
+    <p>I love Hiking and Gaming! Through hiking and mountaineering, I lost 65 pounds from highschool. I've been a gamer my whole life and turned the second bedroom of our 2 bedroom apartment into a game room! </p>
   </div>
+
   <br/>
   <br/>
   <br/>
+
   <h2>Test <em>Test</em></h2>
   
   <p>Test <strong>Test</strong></p>
