add some content of projects created.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>About Me</h2>
     <img src=personalpic.jpg class="personalpic">
     <p>
-    Hello! Welcome to my portfolio. I am studying at <strong></strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area. I'm married and my wife and I share one cat-baby.
+    Hello! Welcome to my portfolio. I am studying at <strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area. I'm married and my wife and I share one <span class=highlight>cat-baby</span>.
     </p>
   </div>
   <br/>
@@ -34,18 +34,17 @@
   <br/>
   <br/>
 
-  <h2>Test <em>Test</em></h2>
-  
-  <p>Test <strong>Test</strong></p>
-  <p>Test</p>
+  <h2>List of Works</h2>
 
-  <p>Test</p>
-  <ul>
+  <p>The following projects are broken down by <em>practice/WIP</em> and <em>portfolio quality/completed</em>.</p>
+
+  <h3>Practice/W.I.P</h3>
+  <ol>
     <li>Test</li>
     <li>Test</li>
     <li>Test</li>
     <li>Test</li>
-  </ul>
+  </ol>
   <p>
     Test <a href="http://www.epicodus.com/"> Test</a>.
   </p>
