add projects content and fix formatting of lists

--- a/index.html
+++ b/index.html
@@ -36,21 +36,26 @@
 
   <h2>List of Works</h2>
 
-  <p>The following projects are broken down by <em>practice/WIP</em> and <em>portfolio quality/completed</em>.</p>
+  <p>The following projects are broken down by <em>portfolio quality/completed</em> and <em>practice/WIP</em>.</p>
+
+  <h3>Portfolio Quality/Completed</h3>
+
+  <ol>
+    <li><a href="https://github.com/Lo-GR/portfolio-project">Portfolio:</a> <p>A portfolio webpage which will act as a landing page in the future. Languages: HTML, CSS, MD.</p> </li>
+  </ol>
 
   <h3>Practice/W.I.P</h3>
   <ol>
-    <li>Test</li>
-    <li>Test</li>
-    <li>Test</li>
-    <li>Test</li>
+    <li>
+      <a href="https://github.com/Lo-GR/my-first-webpage1">my-first-webpage:</a> <p>A collection of practices and notes for the first week of class.</p> <p>Languages: HTML, CSS, MD.</p>
+      <ul>
+        
+      </ul>
+    </li>
+    <li><a href="https://github.com/Lo-GR/wikipedia">Mock Wikipedia Project:</a> <p>A mock up of Wikipedia used to practice Bootstrap.</p> <p>Languages: HTML, CSS, MD.</p> </li>
   </ol>
-  <p>
-    Test <a href="http://www.epicodus.com/"> Test</a>.
-  </p>
-  <p>Test <a href="favorite-things.html">Test</a></p>
-  <img src="cat.jpeg" alt="A photo of a cute kitten." >
-  <p>Test <a href="box-model.html">Test</a></p>
-  <p id="line2">This ID test will also be red. </p>
 </body>
+<footer>
+  <p>Contact Information:Logan Roth diamondintheroth@gmail.com - <a href="https://github.com/Lo-GR"> Github(Lo-GR)</a></p>
+</footer>
 </html>
