add remaining base content of list of work.

--- a/index.html
+++ b/index.html
@@ -49,10 +49,23 @@
     <li>
       <a href="https://github.com/Lo-GR/my-first-webpage1">my-first-webpage:</a> <p>A collection of practices and notes for the first week of class.</p> <p>Languages: HTML, CSS, MD.</p>
       <ul>
-        
+        <p><span class="miniheader">Additional Contributors</span></p>
+        <li>Glen Buck</li>
+        <li>Brian Sturgis</li>
+        <li>Mekinsie Callahan</li>
+        <li>David Couch</li>
       </ul>
     </li>
-    <li><a href="https://github.com/Lo-GR/wikipedia">Mock Wikipedia Project:</a> <p>A mock up of Wikipedia used to practice Bootstrap.</p> <p>Languages: HTML, CSS, MD.</p> </li>
+    <br/>
+    <li>
+      <a href="https://github.com/Lo-GR/wikipedia">Mock Wikipedia Project:</a> <p>A mock up of Wikipedia used to practice Bootstrap.</p> 
+      <p>Languages: HTML, CSS, MD.</p> 
+        <ul>
+          <p><span class="miniheader">Additional Contributors</span></p>
+          <li>Glen Buck</li>
+          <li>Ashley "Ash" Porter</li>
+        </ul>
+    </li>
   </ol>
 </body>
 <footer>
