fix indentation and formating of code

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 </head>
 <body>
   <h1 id="title">Logan Roth's (Lo-GR) Epicodus Portfolio</h1>
-
   <br/>
-
   <div class="aboutme">
     <h2>About Me</h2>
     <img src=personalpic.jpg class="personalpic">
     <p>
-    Hello! Welcome to my portfolio. I am studying at <strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area. I'm married and my wife and I share one <span class=highlight>cat-baby</span>.
+      Hello! Welcome to my portfolio. I am studying at <strong><a href="http://www.epicodus.com/">Epicodus</a></strong> in order change industries. I am a part of the January/Portland Cohort in the C# track. I'm from Washington State and went to school in South Dakota. Currently residing in the Portland Metro Area. I'm married and my wife and I share one <span class=highlight><strong>cat-baby</strong></span>.
     </p>
   </div>
   <br/>
@@ -25,29 +23,34 @@
       I graduated highschool in Port Orchard then went into Olympic College in Bremerton. I graduated from Olympic College with an Associates in Business. In order to continue schooling, I moved to South Dakota and graduated from South Dakota State University with a Bachelors in Science of Entrepreneurial Studies.
     </p>
     <h3>Job Experience</h3>
-    <p>While attending Olympic College, I was hired in a student leader role for a year where I learned leadership, meeting ettique and valuable skills working in a multi-department environment. In South Dakota, I assistant-managed a small startup called Zapoya Delivery(which was then called Zipdish). For a year and a half leading up to Epicodus, I worked at Columbia State Bank as a Loan Documents Processor. </p>
+    <p>
+      While attending Olympic College, I was hired in a student leader role for a year where I learned leadership, meeting ettique and valuable skills working in a multi-department environment. In South Dakota, I assistant-managed a small startup called Zapoya Delivery(which was then called Zipdish). For a year and a half leading up to Epicodus, I worked at Columbia State Bank as a Loan Documents Processor. 
+    </p>
     <h3>Hobbies</h3>
-    <p>I love Hiking and Gaming! Through hiking and mountaineering, I lost 65 pounds from highschool. I've been a gamer my whole life and turned the second bedroom of our 2 bedroom apartment into a game room! </p>
+    <p>
+      I love Hiking and Gaming! Through hiking and mountaineering, I lost 65 pounds from highschool. I've been a gamer my whole life and turned the second bedroom of our 2 bedroom apartment into a game room! 
+    </p>
   </div>
-
   <br/>
   <br/>
   <br/>
-
   <h2>List of Works</h2>
-
-  <p>The following projects are broken down by <em>portfolio quality/completed</em> and <em>practice/WIP</em>.</p>
-
+  <p>
+    The following projects are broken down by <em>portfolio quality/completed</em> and <em>practice/WIP</em>.
+  </p>
   <h3>Portfolio Quality/Completed</h3>
-
   <ol>
-    <li><a href="https://github.com/Lo-GR/portfolio-project">Portfolio:</a> <p>A portfolio webpage which will act as a landing page in the future. Languages: HTML, CSS, MD.</p> </li>
+    <li>
+      <a href="https://github.com/Lo-GR/portfolio-project">Portfolio:</a> <p>A portfolio webpage which will act as a landing page in the future. Languages: HTML, CSS, MD.</p> 
+    </li>
   </ol>
 
   <h3>Practice/W.I.P</h3>
   <ol>
     <li>
-      <a href="https://github.com/Lo-GR/my-first-webpage1">my-first-webpage:</a> <p>A collection of practices and notes for the first week of class.</p> <p>Languages: HTML, CSS, MD.</p>
+      <a href="https://github.com/Lo-GR/my-first-webpage1">my-first-webpage:</a> 
+      <p>A collection of practices and notes for the first week of class.</p> 
+      <p>Languages: HTML, CSS, MD.</p>
       <ul>
         <p><span class="miniheader">Additional Contributors</span></p>
         <li>Glen Buck</li>
@@ -58,7 +61,8 @@
     </li>
     <br/>
     <li>
-      <a href="https://github.com/Lo-GR/wikipedia">Mock Wikipedia Project:</a> <p>A mock up of Wikipedia used to practice Bootstrap.</p> 
+      <a href="https://github.com/Lo-GR/wikipedia">Mock Wikipedia Project:</a> 
+      <p>A mock up of Wikipedia used to practice Bootstrap.</p> 
       <p>Languages: HTML, CSS, MD.</p> 
         <ul>
           <p><span class="miniheader">Additional Contributors</span></p>
